# joe-hasson.com

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev-migrations  Dockerfile.migrations  compose-local.yml  compose.prod.yml  compose.yml  nginx.conf  pyproject.toml  run_server.sh  start.sh  supervisord.conf  try_migrate.sh
.hooks/: sqlx_prepare_offline_check.sh
.sqlx/: query-4d85cb66ed23d4c7d476a4a79de354d116bdbf52451986e6dd1d107ceb8ac9e9.json  query-56665ec27cd2afa458daef32a7ac5845daeb82a4eec389283fe642dada9042be.json  query-66db90b08989f113baa46b14f10f541bf911ac21be08b50b47774ca017373241.json  query-8543b084ac269141fc7eff8b3c7ba4936d99ba75bfe5a2fe4ad19454f585f850.json  query-8b5b4b22a2c36c3e675e01b13cb45c475ac6558bca81ec87950ac70a089c6367.json  query-947f3892dd8e0e0a94bf36cec825f6107864e0ac599b913c020f91bc84ef99e1.json  query-99693e0a7eae74ae23e97938ae40b7293ac7c23b6e3cbb6e33d73f683c51815a.json  query-9d5e19067ec81470a416f8b779670813d31b4e38218ea6250d26888ff8f10ca3.json  query-c937460d6aef83d82cf77d0f0ed25393c1f8982aeac68531bd9db65616c70911.json  query-d60e291df7f2d7ab038ee77663662c33ea1f5e06b78ff10d029fcbc7bf6b38a3.json  query-e8330a0a5a50e5ffc8e78d4418f3dfc225a894c1a01a9797db18b4caf4155708.json  query-e86e955395442f5d27f16015cf0cff31873432424b75d919cad3c4b70e026127.json  query-f59cbd9005ecf0fdfaf895afb0117288032ef481c51a9ce2dd3fef4c83e09eca.json  query-fc9847c0546fae627901dc5bb6bb19052f5b7e0c57236fc00190665c4d899cdd.json  query-fdaa79dcef177908f9882c341920c0f6abce9369f5cc0c76f4afa07296e01c4f.json
blog/: 2025-01-23-1-first-post.html  2025-01-23-2-second-post.html  2025-01-25-1-third-post.html
dev_scripts/: build_and_run.sh  db_connect.sh  install_hooks.sh  quick_serve.py  run_server.sh
dynamic_site/: Cargo.toml
migrations/: 20250119124202_create_subscriptions_table.sql  20250120020246_drop_name_column_from_subscriptions_table.sql  20250122130053_create_email_delivery_queue_table.sql  20250125210058_create_blog_posts_table.sql
nginx/: locations.conf  nginx.dev.conf  nginx.prod.conf
scripts/: deploy.sh  render.py
src/: app.py  domain.rs  email_client.rs  email_delivery_queue.rs  email_template.rs  flash_message.rs  lib.rs  ssr.rs  util.rs
static/: blog.html  cv.html  home.html  index.html  portfolio.html
static_site/: render.py
styles/: base.css  blog.css  cv.css  navbar.css  portfolio.css
templates/: base.html  blog.html  blog_post.html  cv.html  index.html  portfolio.html
(+35 files in other folders)
