[package]
name = "dynamic_site"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/static_build.rs"
name = "static-build"

[[bin]]
path = "src/bin/dynamic.rs"
name = "dynamic-site"

[[bin]]
path = "src/bin/blog_post_dispatcher.rs"
name = "blog-post-dispatcher"

[lib]
path = "src/lib.rs"
name = "shared"

[dependencies]
actix-web = "4"
chrono = "0.4.39"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4"
tera = "1.20"
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.11"
actix-session = { version = "0.7", features = ["cookie-session"] }
validator = "0.16"
anyhow = { version = "1.0", features = ["backtrace"] }
claims = "0.7"
lightningcss_rs = "0.1.0"
quickcheck = "0.9.2"
fake = "2.3"
quickcheck_macros = "0.9.1"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.lettre]
version = "0.11.9"
default-features = false
features = [
    "builder",
    "tokio1-rustls-tls",
    "smtp-transport",
    "tokio1",
    "pool"
]
